k8s/infrastructure/deployment/kubechecks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubechecks
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    app.kubernetes.io/part-of: infrastructure
    app.kubernetes.io/managed-by: argocd
    dev.peekoff: deployment
    kubernetes.io/metadata.name: kubechecks
    # enforce baseline policy (allows root, disallows privileged/host namespaces/hostPath, etc)
    pod-security.kubernetes.io/enforce: baseline
